<resources>
    <string name="app_name">F1S</string>
    <string name="season">Season:</string>
    <string name="season_val">- ,</string>
    <string name="race">Race:</string>
    <string name="round">Round</string>
    <string name="round_val">-</string>
    <string name="race_val">-</string>
    <string name="circuit">Circuit:</string>
    <string name="circuit_val">-</string>
    <string name="location">Location:</string>
    <string name="location_val">-</string>
    <string name="current_gp">Current GP</string>
    <string name="qualifying">Qualifying</string>
    <string name="main_race">Main Race</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="refresh_logo">Refresh Logo</string>
    <string name="arrow_down_logo">arrow_down_logo</string>
    <string name="next_button_logo">Next Button Logo</string>
    <string name="back_button_logo">Back Button Logo</string>
    <string name="schedules">Schedules</string>
    <string name="position">Position</string>
    <string name="driver">Driver</string>
    <string name="points">Points</string>
    <string name="gained">Gained</string>
    <string name="driver_s_championship_standing">Driver\'s Championship Standing</string>
    <string name="drivers">Drivers</string>
    <string name="constructor">Constructor</string>
    <string name="constructor_s_championship_standing">Constructor\'s Championship Standing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh_button">Refresh image button</string>
    <string name="back_button">Back button</string>
    <string name="forward_button">Forward button</string>
</resources>