<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Schedule">

    <TextView
        android:id="@+id/season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/season"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_gp" />

    <TextView
        android:id="@+id/season_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/season_val"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/season"
        app:layout_constraintTop_toTopOf="@+id/season" />

    <TextView
        android:id="@+id/race"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/race"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/season"
        app:layout_constraintTop_toBottomOf="@+id/season" />

    <TextView
        android:id="@+id/round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/round"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/season_val"
        app:layout_constraintTop_toTopOf="@+id/season_val" />

    <TextView
        android:id="@+id/round_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/round_val"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/round"
        app:layout_constraintTop_toTopOf="@+id/round" />

    <TextView
        android:id="@+id/race_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/race_val"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/season_val"
        app:layout_constraintTop_toTopOf="@+id/race" />

    <TextView
        android:id="@+id/circuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/circuit"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/race"
        app:layout_constraintTop_toBottomOf="@+id/race" />

    <TextView
        android:id="@+id/circuit_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circuit_val"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/race_val"
        app:layout_constraintTop_toTopOf="@+id/circuit" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/circuit"
        app:layout_constraintTop_toBottomOf="@+id/circuit" />

    <TextView
        android:id="@+id/location_val_locality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_val"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/circuit_val"
        app:layout_constraintTop_toTopOf="@+id/location" />

    <TextView
        android:id="@+id/location_val_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/location_val_locality"
        app:layout_constraintTop_toTopOf="@+id/location_val_locality" />

    <TextView
        android:id="@+id/current_gp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/current_gp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/season"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView2"
        android:layout_width="352dp"
        android:layout_height="216dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:srcCompat="?attr/popupMenuBackground" />

    <TextView
        android:id="@+id/race1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/imageFilterView2"
        app:layout_constraintTop_toTopOf="@+id/imageFilterView2" />

    <ImageButton
        android:id="@+id/refresh_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/ic_popup_sync"
        android:backgroundTint="#FF1801"
        android:contentDescription="@string/refresh_button"
        app:layout_constraintEnd_toEndOf="@+id/imageFilterView2"
        app:layout_constraintTop_toTopOf="@+id/current_gp" />

    <TextView
        android:id="@+id/race1_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/race1"
        app:layout_constraintTop_toTopOf="@+id/race1" />

    <TextView
        android:id="@+id/race2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/race1"
        app:layout_constraintTop_toBottomOf="@+id/race1" />

    <TextView
        android:id="@+id/race2_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/race1_val"
        app:layout_constraintTop_toBottomOf="@+id/race1_val" />

    <TextView
        android:id="@+id/race3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/race2"
        app:layout_constraintTop_toBottomOf="@+id/race2" />

    <TextView
        android:id="@+id/race3_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/race2_val"
        app:layout_constraintTop_toBottomOf="@+id/race2_val" />

    <TextView
        android:id="@+id/quali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/qualifying"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageFilterView2"
        app:layout_constraintEnd_toEndOf="@+id/imageFilterView2"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/imageFilterView2"
        app:layout_constraintTop_toBottomOf="@+id/race3_val" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/main_race"
        app:layout_constraintEnd_toEndOf="@+id/imageFilterView2"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@+id/imageFilterView2"
        app:layout_constraintTop_toTopOf="@+id/quali" />

    <TextView
        android:id="@+id/quali_val1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/quali"
        app:layout_constraintStart_toStartOf="@+id/quali"
        app:layout_constraintTop_toBottomOf="@+id/quali" />

    <TextView
        android:id="@+id/quali_val2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/quali"
        app:layout_constraintStart_toStartOf="@+id/quali"
        app:layout_constraintTop_toBottomOf="@+id/quali_val1" />

    <TextView
        android:id="@+id/main_val1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/main_val2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/main_val1" />

    <ImageButton
        android:id="@+id/previous"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:background="@android:drawable/ic_media_play"
        android:backgroundTint="#FF1801"
        android:contentDescription="@string/back_button"
        android:rotation="180"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageFilterView2"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="@+id/imageFilterView2"
        app:layout_constraintTop_toBottomOf="@+id/imageFilterView2"
        app:layout_constraintVertical_bias="0.45" />

    <ImageButton
        android:id="@+id/next"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:background="@android:drawable/ic_media_play"
        android:backgroundTint="#FF1801"
        android:contentDescription="@string/forward_button"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageFilterView2"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="@+id/imageFilterView2"
        app:layout_constraintTop_toBottomOf="@+id/imageFilterView2"
        app:layout_constraintVertical_bias="0.45" />

    <Spinner
        android:id="@+id/drop_down_list"
        android:layout_width="323dp"
        android:layout_height="44dp"
        android:background="#85FF1700"
        android:dropDownWidth="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFilterView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:contentDescription="@string/arrow_down_logo"
        app:layout_constraintBottom_toBottomOf="@+id/drop_down_list"
        app:layout_constraintEnd_toEndOf="@+id/drop_down_list"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/drop_down_list"
        app:layout_constraintTop_toTopOf="@+id/drop_down_list"
        app:srcCompat="@android:drawable/arrow_down_float" />

</androidx.constraintlayout.widget.ConstraintLayout>